==> luqman8230339900/nrf523832-with-sdk-17.0-I2C-Twi-OLED/module/ssd1306_driver_adafruit/SSD1306.c <==
#include <stdlib.h>
#include <string.h>
#include "nrf_drv_twi.h"
#include "app_error.h"
#include "SSD1306.h"
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void SSD1306_drawPixel(int16_t x, int16_t y, uint16_t color)
{
        if ((x < 0) || (x >= width()) || (y < 0) || (y >= height()))
                return;

        // check rotation, move pixel around if necessary
        switch (getRotation()) {
        case 1:
                ssd1306_swap(x, y);
                x = WIDTH - x - 1;
                break;
        case 2:
                x = WIDTH - x - 1;
                y = HEIGHT - y - 1;
                break;
        case 3:
                ssd1306_swap(x, y);
                y = HEIGHT - y - 1;
                break;
        }

        // x is which column
        int index = x+ (y/8)*SSD1306_LCDWIDTH;
        //printf("index = %d\n", index);

        switch (color)
        {
        case WHITE:   buffer[index] |=  (1 << (y&7)); break;
        case BLACK:   buffer[index] &= ~(1 << (y&7)); break;
        case INVERSE: buffer[index] ^=  (1 << (y&7)); break;
        }

}

void SSD1306_begin(uint8_t vccstate, uint8_t i2caddr, bool reset) {

        _vccstate = vccstate;
        _i2caddr = i2caddr;

        // Init sequence
        SSD1306_command(SSD1306_DISPLAYOFF);              // 0xAE
        SSD1306_command(SSD1306_SETDISPLAYCLOCKDIV);      // 0xD5
        SSD1306_command(0x80);                            // the suggested ratio 0x80

        SSD1306_command(SSD1306_SETMULTIPLEX);            // 0xA8
        SSD1306_command(SSD1306_LCDHEIGHT - 1);

        SSD1306_command(SSD1306_SETDISPLAYOFFSET);        // 0xD3
        SSD1306_command(0x0);                             // no offset
        SSD1306_command(SSD1306_SETSTARTLINE | 0x0);      // line #0
        SSD1306_command(SSD1306_CHARGEPUMP);              // 0x8D
        if (vccstate == SSD1306_EXTERNALVCC)
        { SSD1306_command(0x10); }
        else
        { SSD1306_command(0x14); }
        SSD1306_command(SSD1306_MEMORYMODE);              // 0x20
        SSD1306_command(0x00);                            // 0x0 act like ks0108
        SSD1306_command(SSD1306_SEGREMAP | 0x1);
        SSD1306_command(SSD1306_COMSCANDEC);

 #if defined SSD1306_128_32
        SSD1306_command(SSD1306_SETCOMPINS);              // 0xDA
        SSD1306_command(0x02);
        SSD1306_command(SSD1306_SETCONTRAST);             // 0x81
        SSD1306_command(0x8F);

#elif defined SSD1306_128_64
        SSD1306_command(SSD1306_SETCOMPINS);              // 0xDA
        SSD1306_command(0x12);
        SSD1306_command(SSD1306_SETCONTRAST);             // 0x81
        if (vccstate == SSD1306_EXTERNALVCC)
        { SSD1306_command(0x9F); }
        else
        { SSD1306_command(0xCF); }

#elif defined SSD1306_96_16
        SSD1306_command(SSD1306_SETCOMPINS);              // 0xDA
        SSD1306_command(0x2); //ada x12
        SSD1306_command(SSD1306_SETCONTRAST);             // 0x81
        if (vccstate == SSD1306_EXTERNALVCC)
        { SSD1306_command(0x10); }
        else
        { SSD1306_command(0xAF); }

#endif

        SSD1306_command(SSD1306_SETPRECHARGE);            // 0xd9
        if (vccstate == SSD1306_EXTERNALVCC)
        { SSD1306_command(0x22); }
        else
        { SSD1306_command(0xF1); }
        SSD1306_command(SSD1306_SETVCOMDETECT);           // 0xDB
        SSD1306_command(0x40);
        SSD1306_command(SSD1306_DISPLAYALLON_RESUME);     // 0xA4
        SSD1306_command(SSD1306_NORMALDISPLAY);           // 0xA6

        SSD1306_command(SSD1306_DEACTIVATE_SCROLL);

        SSD1306_command(SSD1306_DISPLAYON);//--turn on oled panel
}

void SSD1306_invertDisplay(uint8_t i) {
        if (i) {
                SSD1306_command(SSD1306_INVERTDISPLAY);
        } else {
                SSD1306_command(SSD1306_NORMALDISPLAY);
        }
}

void SSD1306_command(uint8_t c)
{
        ret_code_t ret;
        uint8_t data[] = {0x00, c};
        ret = nrf_drv_twi_tx(&m_twi_master, _i2caddr, data, 2, false);
        APP_ERROR_CHECK(ret);
}

void SSD1306_startscrollright(uint8_t start, uint8_t stop){
        SSD1306_command(SSD1306_RIGHT_HORIZONTAL_SCROLL);
        SSD1306_command(0X00);
        SSD1306_command(start);
        SSD1306_command(0X00);
        SSD1306_command(stop);
        SSD1306_command(0X00);
        SSD1306_command(0XFF);
        SSD1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startscrollleft(uint8_t start, uint8_t stop){
        SSD1306_command(SSD1306_LEFT_HORIZONTAL_SCROLL);
        SSD1306_command(0X00);
        SSD1306_command(start);
        SSD1306_command(0X00);
        SSD1306_command(stop);
        SSD1306_command(0X00);
        SSD1306_command(0XFF);
        SSD1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startscrolldiagright(uint8_t start, uint8_t stop)
{
        SSD1306_command(SSD1306_SET_VERTICAL_SCROLL_AREA);
        SSD1306_command(0X00);
        SSD1306_command(SSD1306_LCDHEIGHT);
        SSD1306_command(SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL);
        SSD1306_command(0X00);
        SSD1306_command(start);
        SSD1306_command(0X00);
        SSD1306_command(stop);
        SSD1306_command(0X01);
        SSD1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startscrolldiagleft(uint8_t start, uint8_t stop)
{
        SSD1306_command(SSD1306_SET_VERTICAL_SCROLL_AREA);
        SSD1306_command(0X00);
        SSD1306_command(SSD1306_LCDHEIGHT);
        SSD1306_command(SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL);
        SSD1306_command(0X00);
        SSD1306_command(start);
        SSD1306_command(0X00);
        SSD1306_command(stop);
        SSD1306_command(0X01);
        SSD1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_stopscroll(void){
        SSD1306_command(SSD1306_DEACTIVATE_SCROLL);
}

void SSD1306_dim(bool dim) {
        uint8_t contrast;

        if (dim) {
                contrast = 0; // Dimmed display
        } else {
                if (_vccstate == SSD1306_EXTERNALVCC) {
                        contrast = 0x9F;
                } else {
                        contrast = 0xCF;
                }
        }
        // the range of contrast to too small to be really useful
        // it is useful to dim the display
        SSD1306_command(SSD1306_SETCONTRAST);
        SSD1306_command(contrast);
}

void SSD1306_display(void)
{
        SSD1306_command(SSD1306_COLUMNADDR);
        SSD1306_command(0); // Column start address (0 = reset)
        SSD1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

        SSD1306_command(SSD1306_PAGEADDR);
        SSD1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
        SSD1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
        SSD1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
        SSD1306_command(1); // Page end address
  #endif


        // save I2C bitrate
#ifdef TWBR
        uint8_t twbrbackup = TWBR;
        TWBR = 12; // upgrade to 400KHz!
#endif


        // I2C
        for (uint16_t i=0; i<(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8); i++) {
                uint8_t tmpBuf[17];
                // SSD1306_SETSTARTLINE
                tmpBuf[0] = 0x40;
                // data
                for (uint8_t j = 0; j < 16; j++) {
                        tmpBuf[j+1] = buffer[i];
                        i++;
                }
                i--;

                ret_code_t ret;
                ret = nrf_drv_twi_tx(&m_twi_master, _i2caddr, tmpBuf, sizeof(tmpBuf), false);
                APP_ERROR_CHECK(ret);
        }

#ifdef TWBR
        TWBR = twbrbackup;
#endif

}

void SSD1306_drawFastHLine(int16_t x, int16_t y, int16_t w, uint16_t color) {
        bool bSwap = false;
        switch(getRotation())
        {
        case 0:
                // 0 degree rotation, do nothing
                break;
        case 1:
                // 90 degree rotation, swap x & y for rotation, then invert x
                bSwap = true;
                ssd1306_swap(x, y);
                x = WIDTH - x - 1;
                break;
        case 2:
                // 180 degree rotation, invert x and y - then shift y around for height.
                x = WIDTH - x - 1;
                y = HEIGHT - y - 1;
                x -= (w-1);
                break;
        case 3:
                // 270 degree rotation, swap x & y for rotation, then invert y  and adjust y for w (not to become h)
                bSwap = true;
                ssd1306_swap(x, y);
                y = HEIGHT - y - 1;
                y -= (w-1);
                break;
        }

        if(bSwap) {
                SSD1306_drawFastVLineInternal(x, y, w, color);
        } else {
                SSD1306_drawFastHLineInternal(x, y, w, color);
        }
}

void SSD1306_drawFastVLine(int16_t x, int16_t y, int16_t h, uint16_t color) {
        bool bSwap = false;
        switch(getRotation()) {
        case 0:
                break;
        case 1:
                // 90 degree rotation, swap x & y for rotation, then invert x and adjust x for h (now to become w)
                bSwap = true;
                ssd1306_swap(x, y);
                x = WIDTH - x - 1;
                x -= (h-1);
                break;
        case 2:
                // 180 degree rotation, invert x and y - then shift y around for height.
                x = WIDTH - x - 1;
                y = HEIGHT - y - 1;
                y -= (h-1);
                break;
        case 3:
                // 270 degree rotation, swap x & y for rotation, then invert y
                bSwap = true;
                ssd1306_swap(x, y);
                y = HEIGHT - y - 1;
                break;
        }

        if(bSwap) {
                SSD1306_drawFastHLineInternal(x, y, h, color);
        } else {
                SSD1306_drawFastVLineInternal(x, y, h, color);
        }
}
